--- a/style.css
+++ b/style.css
@@ -108,3 +108,166 @@
           border-radius: 5px;
           background-color: #a9d4d9;
           }
+          .owl-wrapper {
+            margin: 0 auto;
+        }
+        ul{
+          position:absolute;
+          margin:0;
+          padding:0;
+        }
+        
+        li{
+          max-width: 470px;
+          text-align:center;
+          display:inline-block;
+          list-style:none;
+          position:relative;
+          border:solid 12px #fff;
+          background:#fff;
+          box-shadow:0 0 15px 0px #555;
+          transition:all 1s ease;
+          -o-transition:all 1s ease;
+          -moz-transition:all 1s ease;
+          -webkit-transition:all 1s ease;
+          top:50px;
+        }
+        
+        
+        li:hover{
+          top:0px;
+          opacity:0.5;
+        }
+        
+        li:nth-child(1){
+            transform:rotate(10deg);
+        }
+        
+        li:nth-child(2){
+            transform:rotate(0deg);
+        }
+        
+        li:nth-child(3){
+            transform:rotate(-10deg);
+        }
+        
+        li:nth-child(4){
+            transform:rotate(20deg);
+        }
+        li:nth-child(5){
+          transform:rotate(5deg);
+      }
+      
+      li:nth-child(6){
+          transform:rotate(-10deg);
+      }
+      
+      li:nth-child(7){
+          transform:rotate(10deg);
+      }
+      
+      li:nth-child(8){
+          transform:rotate(0deg);
+      }
+      li:nth-child(9){
+        transform:rotate(10deg);
+      }
+    
+      li:nth-child(10){
+        transform:rotate(-5deg);
+      }
+    
+      li:nth-child(11){
+        transform:rotate(-10deg);
+      }
+    
+       li:nth-child(12){
+        transform:rotate(10deg);
+        }
+        li:nth-child(13){
+        transform:rotate(10deg);
+    }
+  
+        li:nth-child(14){
+      transform:rotate(-15deg);
+      }
+  
+      li:nth-child(15){
+      transform:rotate(15deg);
+      }
+  
+      li:nth-child(16){
+      transform:rotate(0deg);
+        }
+        li:nth-child(17){
+          transform:rotate(-10deg);
+      }
+      
+      li:nth-child(18){
+          transform:rotate(5deg);
+      }
+      
+      li:nth-child(19){
+          transform:rotate(-10deg);
+      }
+      
+      li:nth-child(20){
+          transform:rotate(10deg);
+      }
+      li:nth-child(21){
+        transform:rotate(-5deg);
+    }
+    
+    li:nth-child(22){
+        transform:rotate(-15deg);
+    }
+    
+    li:nth-child(23){
+        transform:rotate(10deg);
+    }
+    
+    li:nth-child(24){
+        transform:rotate(0deg);
+    }
+    li:nth-child(25){
+      transform:rotate(-10deg);
+    }
+  
+    li:nth-child(26){
+      transform:rotate(10deg);
+    }
+  
+    li:nth-child(27){
+      transform:rotate(-10deg);
+    }
+  
+     li:nth-child(28){
+      transform:rotate(-10deg);
+      }
+      li:nth-child(29){
+      transform:rotate(5deg);
+  }
+
+      li:nth-child(30){
+    transform:rotate(-5deg);
+    }
+
+    li:nth-child(31){
+    transform:rotate(10deg);
+    }
+        p{
+          margin:-15px 0 0 0;
+        }
+        
+        .light{
+          border-radius:50%;
+          position:absolute;
+          left:0;
+          right:0;
+          width:700px;
+          height:700px;
+          background:#fff;
+          filter:blur(100px);
+          opacity:0.3;
+          pointer-events:none;
+        }        
