--- a/style.css
+++ b/style.css
@@ -254,9 +254,106 @@
 
     li:nth-child(31){
     transform:rotate(10deg);
-    }
+    }li:nth-child(1){
+      transform:rotate(10deg);
+  }
+  
+  li:nth-child(32){
+      transform:rotate(0deg);
+  }
+  
+  li:nth-child(33){
+      transform:rotate(-10deg);
+  }
+  
+  li:nth-child(34){
+      transform:rotate(20deg);
+  }
+  li:nth-child(35){
+    transform:rotate(5deg);
+}
+
+li:nth-child(36){
+    transform:rotate(-10deg);
+}
+
+li:nth-child(37){
+    transform:rotate(10deg);
+}
+
+li:nth-child(38){
+    transform:rotate(0deg);
+}
+li:nth-child(39){
+  transform:rotate(10deg);
+}
+
+li:nth-child(40){
+  transform:rotate(-5deg);
+}
+
+li:nth-child(41){
+  transform:rotate(-10deg);
+}
+
+ li:nth-child(42){
+  transform:rotate(10deg);
+  }
+  li:nth-child(43){
+  transform:rotate(10deg);
+}
+
+  li:nth-child(44){
+transform:rotate(-15deg);
+}
+
+li:nth-child(45){
+transform:rotate(15deg);
+}
+
+li:nth-child(46){
+transform:rotate(0deg);
+  }
+  li:nth-child(47){
+    transform:rotate(10deg);
+}
+
+li:nth-child(48){
+    transform:rotate(0deg);
+}
+li:nth-child(49){
+  transform:rotate(10deg);
+}
+
+li:nth-child(50){
+  transform:rotate(-5deg);
+}
+
+li:nth-child(51){
+  transform:rotate(-10deg);
+}
+
+ li:nth-child(52){
+  transform:rotate(10deg);
+  }
+  li:nth-child(53){
+  transform:rotate(10deg);
+}
+
+  li:nth-child(54){
+transform:rotate(-15deg);
+}
+
+li:nth-child(55){
+transform:rotate(15deg);
+}
+
+li:nth-child(56){
+transform:rotate(0deg);
+  }
         p{
-          margin:-15px 0 0 0;
+          margin:0 0 0 0;
+          color: #000000;
         }
         
         .light{
